feat: Organization RunnerDeployment with webhook-based autoscaling only for certain repositories (#766)
Resolves #765

Co-authored-by: Yusuke Kuoka <ykuoka@gmail.com>

--- a/charts/actions-runner-controller/crds/actions.summerwind.dev_horizontalrunnerautoscalers.yaml
+++ b/charts/actions-runner-controller/crds/actions.summerwind.dev_horizontalrunnerautoscalers.yaml
@@ -173,6 +173,13 @@ spec:
                               items:
                                 type: string
                               type: array
+                            repositories:
+                              description: Repositories is a list of GitHub repositories.
+                                Any check_run event whose repository matches one of
+                                repositories in the list can trigger autoscaling.
+                              items:
+                                type: string
+                              type: array
                             status:
                               type: string
                             types:
