--- a/.github/workflows/on-push-lint-charts.yml
+++ b/.github/workflows/on-push-lint-charts.yml
@@ -4,10 +4,9 @@ on:
   push:
     paths:
       - 'charts/**'
+      - '.github/workflows/on-push-lint-charts.yml'
       - '!charts/actions-runner-controller/docs/**'
-      - '!charts/actions-runner-controller/*.md'
-      - '.github/**'
-      - '!.github/*.md'
+      - '!**.md'
   workflow_dispatch:
 env:
   KUBE_SCORE_VERSION: 1.10.0
