--- a/.github/workflows/on-push-master-publish-chart.yml
+++ b/.github/workflows/on-push-master-publish-chart.yml
@@ -4,11 +4,10 @@ on:
   push:
     branches:
       - master
-      - main # assume that the branch name may change in future
     paths:
       - 'charts/**'
+      - '.github/workflows/on-push-master-publish-chart.yml'
       - '!charts/actions-runner-controller/docs/**'
-      - '.github/**'
       - '!**.md'
   workflow_dispatch:
 
