--- a/charts/actions-runner-controller/templates/manager_secrets.yaml
+++ b/charts/actions-runner-controller/templates/manager_secrets.yaml
@@ -9,10 +9,10 @@ metadata:
 type: Opaque
 data:
 {{- if .Values.authSecret.github_app_id }}
-  github_app_id: {{ .Values.authSecret.github_app_id | toString | b64enc }}
+  github_app_id: {{ .Values.authSecret.github_app_id | int | toString | b64enc }}
 {{- end }}
 {{- if .Values.authSecret.github_app_installation_id }}
-  github_app_installation_id: {{ .Values.authSecret.github_app_installation_id | toString | b64enc }}
+  github_app_installation_id: {{ .Values.authSecret.github_app_installation_id | int | toString | b64enc }}
 {{- end }}
 {{- if .Values.authSecret.github_app_private_key }}
   github_app_private_key: {{ .Values.authSecret.github_app_private_key | toString | b64enc }}
