Revert "chore: support app ids as int or strings (#869)" (#883)
* Revert "chore: support app ids as int or strings (#869)"

This reverts commit 0a3d2b686e72ec78d578671bf5305d1183701c7b.

* docs: adding some comments to the code

* docs: adding comment to the chart values

--- a/charts/actions-runner-controller/templates/manager_secrets.yaml
+++ b/charts/actions-runner-controller/templates/manager_secrets.yaml
@@ -13,10 +13,12 @@ metadata:
 type: Opaque
 data:
 {{- if .Values.authSecret.github_app_id }}
-  github_app_id: {{ .Values.authSecret.github_app_id | int | toString | b64enc }}
+  # Keep this as a string as strings integrate better with things like AWS Parameter Store, see PR #882 for an example
+  github_app_id: {{ .Values.authSecret.github_app_id | toString | b64enc }}
 {{- end }}
 {{- if .Values.authSecret.github_app_installation_id }}
-  github_app_installation_id: {{ .Values.authSecret.github_app_installation_id | int | toString | b64enc }}
+  # Keep this as a string as strings integrate better with things like AWS Parameter Store, see PR #882 for an example
+  github_app_installation_id: {{ .Values.authSecret.github_app_installation_id | toString | b64enc }}
 {{- end }}
 {{- if .Values.authSecret.github_app_private_key }}
   github_app_private_key: {{ .Values.authSecret.github_app_private_key | toString | b64enc }}
