--- a/charts/actions-runner-controller/values.yaml
+++ b/charts/actions-runner-controller/values.yaml
@@ -27,7 +27,8 @@ authSecret:
   create: false
   name: "controller-manager"
   annotations: {}
-  ### GitHub App Configuration
+  ### GitHub Apps Configuration
+  ## NOTE: IDs MUST be strings, use quotes
   #github_app_id: ""
   #github_app_installation_id: ""
   #github_app_private_key: |
