ci: remove ubuntu 18.04 image (#980)
* ci: remove Ubuntu 18.04 runner

Co-authored-by: toast-gear <toast-gear@users.noreply.github.com>

--- a/.github/workflows/runners.yml
+++ b/.github/workflows/runners.yml
@@ -1,4 +1,4 @@
-name: Ubuntu 18.04 Runners
+name: Runners
 
 on:
   pull_request:
@@ -11,27 +11,30 @@ on:
       - 'master'
     paths:
       - 'runner/**'
-      - .github/workflows/ubuntu-18-04-runners.yml
+      - .github/workflows/runners.yml
       - '!**.md'
-      - '!runner/Dockerfile'
-      - '!runner/Dockerfile.dindrunner'
 
 env:
-  RUNNER_VERSION: 2.284.0
+  RUNNER_VERSION: 2.285.0
   DOCKER_VERSION: 20.10.8
   DOCKERHUB_USERNAME: summerwind
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Build ${{ matrix.name }}-ubuntu-${{ matrix.os-version }}
+    name: Build ${{ matrix.name }}-${{ matrix.os-name }}-${{ matrix.os-version }}
     strategy:
       fail-fast: false
       matrix:
         include:
           - name: actions-runner
-            os-version: 18.04
-            dockerfile: Dockerfile.ubuntu.1804
+            os-name: ubuntu
+            os-version: 20.04
+            dockerfile: Dockerfile
+          - name: actions-runner-dind
+            os-name: ubuntu
+            os-version: 20.04
+            dockerfile: Dockerfile.dindrunner
 
     steps:
       - name: Checkout
@@ -55,7 +58,8 @@ jobs:
             RUNNER_VERSION=${{ env.RUNNER_VERSION }}
             DOCKER_VERSION=${{ env.DOCKER_VERSION }}
           tags: |
-            ${{ env.DOCKERHUB_USERNAME }}/${{ matrix.name }}:v${{ env.RUNNER_VERSION }}-ubuntu-${{ matrix.os-version }}
-            ${{ env.DOCKERHUB_USERNAME }}/${{ matrix.name }}:v${{ env.RUNNER_VERSION }}-ubuntu-${{ matrix.os-version }}-${{ steps.vars.outputs.sha_short }}
+            ${{ env.DOCKERHUB_USERNAME }}/${{ matrix.name }}:v${{ env.RUNNER_VERSION }}-${{ matrix.os-name }}-${{ matrix.os-version }}
+            ${{ env.DOCKERHUB_USERNAME }}/${{ matrix.name }}:v${{ env.RUNNER_VERSION }}-${{ matrix.os-name }}-${{ matrix.os-version }}-${{ steps.vars.outputs.sha_short }}
+            ${{ env.DOCKERHUB_USERNAME }}/${{ matrix.name }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
