chore: change to trigger build (#1093)
* chore: change to trigger build

* ci: actually use variable

Co-authored-by: toast-gear <toast-gear@users.noreply.github.com>

--- a/.github/workflows/runners.yml
+++ b/.github/workflows/runners.yml
@@ -47,7 +47,7 @@ jobs:
         id: vars
         uses: ./.github/actions/setup-docker-environment
         with: 
-          username: ${{ secrets.DOCKER_USER }}
+          username: ${{ env.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
           ghcr_username: ${{ github.actor }}
           ghcr_password: ${{ secrets.GITHUB_TOKEN }}
